More TODO.org updates.

--- a/TODO.org
+++ b/TODO.org
@@ -4,6 +4,8 @@
 
 * Create top-level Linux.hs module with tidy exports.
 
+* Clean up Sysfs interpreter.
+
 * Make types lens-ready.
 
 * Check compatibility with debounce, timeout
