--- a/TODO.org
+++ b/TODO.org
@@ -25,6 +25,8 @@ to its MonadThrow constraint, but they might be OK for SysfsMock.
 * Add a MonadSysfs example?
 
 * Release 0.6.0.
+Get PVP & Stack right.
+
 Put it on Hackage? RFC on Reddit?
 
 * Implement FreeBSD GPIO (using ioctls?).
